Some prepubish changes, manifest, splash and promo image

--- a/goodbye-quora-embed-button/manifest.json
+++ b/goodbye-quora-embed-button/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Goodbye Quora Embed Button - Disable the Embed Quote Button",
+  "name": "Goodbye Quora Embed Button",
   "version": "1.0",
   "manifest_version": 2,
   "description": "Disable the annoying Embed Quote button on Quora that appears when highlighting/selecting text.",
