Updated the manifest to enable https URLs. Had a bunch of invalid manifest errors that made no sense, hence the jump from 1.4 to 1.44 for a single fix

--- a/goodbye-quora-embed-button/manifest.json
+++ b/goodbye-quora-embed-button/manifest.json
@@ -1,15 +1,15 @@
 {
   "name": "Goodbye Quora Embed Button",
-  "version": "1.1",
+  "version": "1.44",
   "manifest_version": 2,
-  "description": "Disable the annoying Embed Quote button on Quora that appears when highlighting/selecting text.",
+  "description": "Stop the Embed Quote button on Quora from popping up when you select/highlight text.",
   "icons": {
     "16": "icon16.png",
     "48": "icon48.png",
     "128": "icon128.png"
   },
   "content_scripts": [{
-    "matches": ["http://*.quora.com/*"],
+    "matches": ["*://*.quora.com/*"],
     "js": ["contentscript.js"],
     "all_frames": false,
     "run_at": "document_end"
